fixed menu tab z-index

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ p, a, input, div, span, h1, h2, h3 {font-family: 'Source Sans Pro', sans-serif;}
   width: 100%;
   height: 4.5em;
   vertical-align: middle;
+  z-index: 2;
 }
 .menu-icon {
   display: inline-block;
@@ -55,6 +56,7 @@ p, a, input, div, span, h1, h2, h3 {font-family: 'Source Sans Pro', sans-serif;}
   margin-left:1em;
   margin-top:0.5em;
   position: fixed;
+  z-index: 3;
 }
 .bar1, .bar2, .bar3 {
   width: 35px;
